# thread-sync-demo

./: CMakeLists.txt
app/: main.cpp
